# pokerust

./: Cargo.toml  README.md  cli.yml
src/: ability.rs  api_resource.rs  fetch_external.rs  flavor_text_entry.rs  generations.rs  held_item.rs  http.rs  main.rs  named_api_resource.rs  pk_move.rs  pk_type.rs  pokemon.rs  pokemon_species.rs  pokemon_stat.rs  version_game_index.rs
src/abilities/: mod.rs  pokemon_ability.rs  pokemon_ability_ext.rs  renderable_ability.rs
src/moves/: mod.rs  pokemon_move.rs  pokemon_move_ext.rs  pokemon_move_version.rs  renderable_move.rs
