[package]
name = "pokerust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["client"] }
tokio = { version = "1", features = ["full"] }
hyper-tls = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.0.0-beta.4", features = ["yaml"] }
tabled = "0.3.0"
owo-colors = "2.1.0"
papergrid = "0.1.23"
ansi-cut = { version = "0.1.1", optional = true }
rayon = "1.5.1"

[dev-dependencies]
yup-hyper-mock = "*"
log = "*"

[features]
color = ["papergrid/color", "ansi-cut"]